# agrobase-py

./: .cz.toml  .gitignore  .pre-commit-config.yaml  .pypirc  CHANGELOG.md  Pipfile  README.md  pyproject.toml  requirements.txt
src/: README.md  setup.py
src/agrobase/: entities.py  enums.py  exceptions.py  lock.py  prisma_connector.py  settings.py  validations.py
src/agrobase/connectors/: prisma_connector.py
src/agrobase/connectors/bio_archival/: assay_factory.py  dtos.py
src/agrobase/connectors/bio_archival/tests/: test_assay_factory.py  test_dtos.py
src/agrobase/enums/: __init__.py  crop.py  group.py  inference_source.py  taxa.py
