# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[project]

name = "agrobase"
version = "2.2.2"
authors = [
    { name = "Biotrop - Bioinformatic Team", email = "bioinfo@biotrop.com.br" },
]
description = "The Biotrop base package for clean architecture in Python."
requires-python = ">=3.11"
keywords = ["Biotrop", "Bioinformatics", "Agroreporter"]
classifiers = ["Programming Language :: Python :: 3.11"]
dependencies = [
    "annotated-types==0.5.0 ; python_version >= '3.7'",
    "anyio==3.7.0 ; python_version >= '3.7'",
    "certifi==2023.5.7 ; python_version >= '3.6'",
    "click==8.1.3 ; python_version >= '3.7'",
    "h11==0.14.0 ; python_version >= '3.7'",
    "httpcore==0.17.2 ; python_version >= '3.7'",
    "httpx==0.24.1 ; python_version >= '3.7'",
    "idna==3.4 ; python_version >= '3.5'",
    "jinja2==3.1.2 ; python_version >= '3.7'",
    "markupsafe==2.1.3 ; python_version >= '3.7'",
    "nodeenv==1.8.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'",
    "prisma==0.8.2",
    "pydantic==2.0b2 ; python_version >= '3.7'",
    "pydantic-core==0.38.0 ; python_version >= '3.7'",
    "python-dotenv==1.0.0 ; python_version >= '3.8'",
    "setuptools==78.1.1 ; python_version >= '3.7'",
    "sniffio==1.3.0 ; python_version >= '3.7'",
    "tomlkit==0.11.8 ; python_version >= '3.7'",
    "typing-extensions==4.6.3 ; python_version >= '3.7'",
    "unidecode==1.3.6",
]


# ? ----------------------------------------------------------------------------
# ? Code consistence
# ? ----------------------------------------------------------------------------

[tool.mypy]
python_version = 3.11
exclude = ["build/", "dist/", "docs/", "venv/"]
ignore_missing_imports = "True"
follow_imports = "normal"
warn_redundant_casts = "True"
warn_unused_ignores = "False"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"
namespace_packages = "False"
disallow_untyped_defs = "True"


[tool.attrs-mypy]
init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"
warn_untyped_fields = "True"


[tool.flake8]
ignore = "E722, W503, E501, E203"
per-file-ignore = "**/__init__.py: F401"
