# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[project]

name = "agrobase"
version = "2.2.2"
authors = [
    { name = "Biotrop - Bioinformatic Team", email = "bioinfo@biotrop.com.br" },
]
description = "The Biotrop base package for clean architecture in Python."
requires-python = ">=3.11"
keywords = ["Biotrop", "Bioinformatics", "Agroreporter"]
classifiers = ["Programming Language :: Python :: 3.11"]
# Only the direct runtime imports are declared. The previous list was a
# `pip freeze` snapshot mixing dev tooling, transitive deps and beta
# pre-releases (notably `pydantic==2.0b2` and `prisma==0.8.2`) which
# blocked consumers in the monorepo from upgrading. The wheel published
# to the Azure DevOps feed was built with `Requires: ` empty for exactly
# this reason; the relaxed list below matches that intent while still
# expressing the real surface (`attrs`, `prisma`, `unidecode`,
# `python-dotenv`) so a clean `pip install .` outside the monorepo keeps
# working.
dependencies = [
    "attrs>=23.1",
    "prisma>=0.8,<1.0",
    "python-dotenv>=1.0",
    "unidecode>=1.3,<2.0",
]


# ? ----------------------------------------------------------------------------
# ? Code consistence
# ? ----------------------------------------------------------------------------

[tool.mypy]
python_version = 3.11
exclude = ["build/", "dist/", "docs/", "venv/"]
ignore_missing_imports = "True"
follow_imports = "normal"
warn_redundant_casts = "True"
warn_unused_ignores = "False"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"
namespace_packages = "False"
disallow_untyped_defs = "True"


[tool.attrs-mypy]
init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"
warn_untyped_fields = "True"


[tool.flake8]
ignore = "E722, W503, E501, E203"
per-file-ignore = "**/__init__.py: F401"
